commented out visual-bell stuff in tmux.conf

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,6 +1,6 @@
 #turn off the freaking bell
-set bell-on-alert off
-set visual-bell off
+#set bell-on-alert off
+#set visual-bell off
 
 # Powerline Configuration file
 #source '/usr/share/tmux/powerline.conf'
