--- a/mutt/.muttrc
+++ b/mutt/.muttrc
@@ -62,42 +62,42 @@ macro pager H 's=archive'   "Learn as ham and save"
 ########################################################
 ####  Colors
 ########################################################
-color quoted    yellow     default
-color quoted1   cyan       default
-color quoted2   magenta    default
-color quoted3   green      default
-color quoted4   red        default
-
-color signature blue default
-color normal    white black
-color status    brightgreen blue
-color indicator brightyellow black
-color error     red black
-color tree      yellow black
-color attachment blue default
-color index     cyan black (calomel.org)
-color header    green black .*
-color header    brightred  black (^From\:|^Reply-To\:)
-color header    brightyellow black (^To\:|^cc\:|^Cc\:)
-
-color body      magenta      default "(ftp|http|https)://[^ ]+"
-color body      magenta      default [-a-z_0-9.]+@[-a-z_0-9.]+
-color body      brightgreen  default "^(gpg: )?Good signature"
-color body      brightgreen  default "^(gpg: )?encrypted"
-color body      brightred    default "^(gpg: )?Bad signature"
-color body      red          default "^(gpg: )?warning:"
-color body      red          default "^(gpg: ).*failed:"
-
-color message    magenta        default # info messages
-color search     brightyellow   red     # search matches
-color tilde      brightmagenta  default # ~ at bottom of msg
-color markers    red            default # + at beginning of wrapped lines
-color hdrdefault cyan           default # default header lines
-color bold       cyan           default # hiliting bold patterns in body
-color underline  cyan           default # hiliting underlined patterns in body
-
-color index     green          default  ~T      # Tagged
-color index     red            default  ~D      # Deleted
+#color quoted    yellow     default
+#color quoted1   cyan       default
+#color quoted2   magenta    default
+#color quoted3   green      default
+#color quoted4   red        default
+#
+#color signature blue default
+#color normal    white black
+#color status    brightgreen blue
+#color indicator brightyellow black
+#color error     red black
+#color tree      yellow black
+#color attachment blue default
+#color index     cyan black (calomel.org)
+#color header    green black .*
+#color header    brightred  black (^From\:|^Reply-To\:)
+#color header    brightyellow black (^To\:|^cc\:|^Cc\:)
+#
+#color body      magenta      default "(ftp|http|https)://[^ ]+"
+#color body      magenta      default [-a-z_0-9.]+@[-a-z_0-9.]+
+#color body      brightgreen  default "^(gpg: )?Good signature"
+#color body      brightgreen  default "^(gpg: )?encrypted"
+#color body      brightred    default "^(gpg: )?Bad signature"
+#color body      red          default "^(gpg: )?warning:"
+#color body      red          default "^(gpg: ).*failed:"
+#
+#color message    magenta        default # info messages
+#color search     brightyellow   red     # search matches
+#color tilde      brightmagenta  default # ~ at bottom of msg
+#color markers    red            default # + at beginning of wrapped lines
+#color hdrdefault cyan           default # default header lines
+#color bold       cyan           default # hiliting bold patterns in body
+#color underline  cyan           default # hiliting underlined patterns in body
+#
+#color index     green          default  ~T      # Tagged
+#color index     red            default  ~D      # Deleted
 
 #######################################################
 ### Options
