--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -14,7 +14,8 @@
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
 #font -misc-droid sans mono-medium-r-normal--17-120-100-100-m-0-iso10646-1
-font pango:DejaVu Sans Mono 8
+#font pango:DejaVu Sans Mono 8
+font pango:Droid Sans 9  
 # Before i3 v4.8, we used to recommend this one as the default:
 # font -misc-fixed-medium-r-normal--13-120-75-75-C-70-iso10646-1
 # The font above is very space-efficient, that is, it looks good, sharp and
@@ -106,11 +107,11 @@ bindsym $mod+Shift+minus move scratchpad
 bindsym $mod+minus scratchpad show
 
 # Variables
-set $WS1 "1: term"
-set $WS2 "2: web"
-set $WS3 "3: comms"
-set $WS4 "4: code"
-set $WS5 "5: sys"
+set $WS1 "1:term"
+set $WS2 "2:web"
+set $WS3 "3:comms"
+set $WS4 "4:code"
+set $WS5 "5:sys"
 
 # switch to workspace
 bindsym $mod+1 workspace $WS1
@@ -171,9 +172,27 @@ bindsym $mod+r mode "resize"
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
+# Top bar
 bar {
+        position top
+        tray_output none
+        workspace_buttons yes
+        #strip_workspace_numbers yes
         status_command i3status
 }
+
+# Bottom bar
+#bar {
+#        position bottom
+#        status_command i3status
+#        workspace_buttons no
+#}
+
+# My config modifications
+# General settings
+hide_edge_borders both # hides borders for all windows
+new_window none # No title bar for windows
+default_orientation vertical # new windows have start under old ones
 workspace_auto_back_and_forth yes
 # Assignment Rules
 assign [class="st-256color" title="irssi"] $WS3
@@ -181,7 +200,7 @@ assign [class="st-256color" title="mutt"] $WS3
 assign [class="st-256color" title="tmux"] $WS1
 
 # Start various programs
-exec --no-startup-id i3-msg 'workspace "1: term"; exec "st -e tmux"'
-exec --no-startup-id i3-msg 'workspace "2: web"; exec dwb'
-exec --no-startup-id i3-msg 'workspace "3: comms"; exec "st -e irssi"; exec "st -e mutt"'
-exec --no-startup-id i3-msg 'workspace "1: term"'
+exec --no-startup-id i3-msg 'workspace "1:term"; exec "st -e tmux"'
+exec --no-startup-id i3-msg 'workspace "2:web"; exec dwb'
+exec --no-startup-id i3-msg 'workspace "3:comms"; exec "st -e irssi"; exec "st -e mutt"'
+exec --no-startup-id i3-msg 'workspace "1:term"'
