--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -177,7 +177,7 @@ bar {
         position top
         tray_output none
         workspace_buttons yes
-        #strip_workspace_numbers yes
+        strip_workspace_numbers yes
         status_command i3status
 }
 
