--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -15,7 +15,7 @@
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
 #font -misc-droid sans mono-medium-r-normal--17-120-100-100-m-0-iso10646-1
 #font pango:DejaVu Sans Mono 8
-font pango:Droid Sans 9  
+font pango:Droid Sans Mono for Powerline 8  
 # Before i3 v4.8, we used to recommend this one as the default:
 # font -misc-fixed-medium-r-normal--13-120-75-75-C-70-iso10646-1
 # The font above is very space-efficient, that is, it looks good, sharp and
@@ -37,13 +37,14 @@ set $mod Mod4
 floating_modifier $mod
 
 # start a terminal
-bindsym $mod+Return exec st
+#bindsym $mod+Return exec st
+bindsym $mod+Return exec urxvt
 
 # kill focused window
 bindsym $mod+Shift+q kill
 
 # start dmenu (a program launcher)
-bindsym $mod+d exec dmenu_run
+bindsym $mod+d exec dmenu_run -b
 # There also is the (new) i3-dmenu-desktop which only displays applications
 # shipping a .desktop file. It is a wrapper around dmenu, so you need that
 # installed.
@@ -195,12 +196,12 @@ new_window none # No title bar for windows
 default_orientation vertical # new windows have start under old ones
 workspace_auto_back_and_forth yes
 # Assignment Rules
-assign [class="st-256color" title="irssi"] $WS3
-assign [class="st-256color" title="mutt"] $WS3
-assign [class="st-256color" title="tmux"] $WS1
+assign [class="URxvt" title="irssi"] → $WS3
+assign [class="URxvt" title="mutt"] → $WS3
+assign [class="URxvt" title="tmux"] → $WS1
 
 # Start various programs
-exec --no-startup-id i3-msg 'workspace "1:term"; exec "st -e tmux"'
+exec --no-startup-id i3-msg 'workspace "1:term"; exec "urxvt -e tmux"'
 exec --no-startup-id i3-msg 'workspace "2:web"; exec dwb'
-exec --no-startup-id i3-msg 'workspace "3:comms"; exec "st -e irssi"; exec "st -e mutt"'
+exec --no-startup-id i3-msg 'workspace "3:comms"; exec "urxvt -e irssi"; exec "urxvt -e mutt"'
 exec --no-startup-id i3-msg 'workspace "1:term"'
