--- a/compton/.config/compton.conf
+++ b/compton/.config/compton.conf
@@ -1,7 +1,7 @@
-menu-opacity = 0.8;
+menu-opacity = 1.0;
 inactive-opacity = 0.8;
-# active-opacity = 0.8;
+active-opacity = 0.95;
 frame-opacity = 0.7;
+no-dock-shadow = true;
 
-#Exclude dmenu
-shadow-exclude = [ "Dmenu" ];
+opacity-rule = [ "99:class_g = 'Dwb'" ];
