--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -180,6 +180,7 @@ bar {
         workspace_buttons yes
         strip_workspace_numbers yes
         status_command i3status
+        #status_command conky
 }
 
 # Bottom bar
@@ -199,8 +200,10 @@ workspace_auto_back_and_forth yes
 assign [class="URxvt" title="irssi"] → $WS3
 assign [class="URxvt" title="mutt"] → $WS3
 assign [class="URxvt" title="tmux"] → $WS1
+assign [class="URxvt" title="ranger*"] → $WS5
 
 # Start various programs
+exec "urxvt -e ranger"
 exec --no-startup-id i3-msg 'workspace "1:term"; exec "urxvt -e tmux"'
 exec --no-startup-id i3-msg 'workspace "2:web"; exec dwb'
 exec --no-startup-id i3-msg 'workspace "3:comms"; exec "urxvt -e irssi"; exec "urxvt -e mutt"'
