Added chromium to opacity-rule list

--- a/compton/.config/compton.conf
+++ b/compton/.config/compton.conf
@@ -4,4 +4,5 @@ active-opacity = 0.95;
 frame-opacity = 0.7;
 no-dock-shadow = true;
 
-opacity-rule = [ "99:class_g = 'Dwb'" ];
+opacity-rule = [ "99:class_g = 'Dwb'", "99:class_g = 'xbmc.bin'", 
+                 "99:class_g = 'Chromium'" ];
