--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -107,6 +107,11 @@ bindsym $mod+Shift+minus move scratchpad
 # If there are multiple scratchpad windows, this command cycles through them.
 bindsym $mod+minus scratchpad show
 
+# Keybinds for volume control.
+bindcode 123 exec --no-startup-id amixer set Master 5%+
+bindcode 122 exec --no-startup-id amixer set Master 5%-
+bindcode 121 exec --no-startup-id amixer set Master toggle
+
 # Variables
 set $WS1 "1:term"
 set $WS2 "2:web"
@@ -203,7 +208,7 @@ assign [class="URxvt" title="tmux"] → $WS1
 assign [class="URxvt" title="ranger*"] → $WS5
 
 # Start various programs
-exec "urxvt -e ranger"
+#exec "urxvt -e ranger"
 exec --no-startup-id i3-msg 'workspace "1:term"; exec "urxvt -e tmux"'
 exec --no-startup-id i3-msg 'workspace "2:web"; exec dwb'
 exec --no-startup-id i3-msg 'workspace "3:comms"; exec "urxvt -e irssi"; exec "urxvt -e mutt"'
