Added battery stuff to i3status bar

--- a/i3/.config/i3status/config
+++ b/i3/.config/i3status/config
@@ -15,6 +15,7 @@ general {
 #order += "disk /home"
 order += "wireless wlan0"
 #order += "load"
+order += "battery 0"
 order += "tztime local"
 
 wireless wlan0 {
