--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -107,6 +107,12 @@ bindsym $mod+Shift+minus move scratchpad
 # If there are multiple scratchpad windows, this command cycles through them.
 bindsym $mod+minus scratchpad show
 
+#Keybinds for volume control.
+bindcode 123 exec --no-startup-id amixer set Master 5%+
+bindcode 122 exec --no-startup-id amixer set Master 5%-
+bindcode 121 exec --no-startup-id amixer set Master toggle
+
+
 # Keybind to take a scrot
 bindcode 208 exec --no-startup-id scrot '%Y-%m-%d_$wx$h.png' -e 'mv $f ~/Pictures/scrots/'
 
