--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -112,6 +112,7 @@ bindcode 123 exec --no-startup-id amixer set Master 5%+
 bindcode 122 exec --no-startup-id amixer set Master 5%-
 bindcode 121 exec --no-startup-id amixer set Master toggle
 
+bindcode 37 exec --no-startup-id i3lock
 
 # Keybind to take a scrot
 bindcode 208 exec --no-startup-id scrot '%Y-%m-%d_$wx$h.png' -e 'mv $f ~/Pictures/scrots/'
@@ -215,5 +216,5 @@ assign [class="URxvt" title="ranger*"] → $WS5
 #exec "urxvt -e ranger"
 exec --no-startup-id i3-msg 'workspace "1:term"; exec "urxvt -e tmux"'
 exec --no-startup-id i3-msg 'workspace "2:web"; exec dwb'
-exec --no-startup-id i3-msg 'workspace "3:comms"; exec "urxvt -e mutt"'
+#exec --no-startup-id i3-msg 'workspace "3:comms"; exec "urxvt -e mutt"'
 exec --no-startup-id i3-msg 'workspace "1:term"'
