--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -112,7 +112,7 @@ bindcode 123 exec --no-startup-id amixer set Master 5%+
 bindcode 122 exec --no-startup-id amixer set Master 5%-
 bindcode 121 exec --no-startup-id amixer set Master toggle
 
-bindcode 37 exec --no-startup-id i3lock
+#bindcode 37 exec --no-startup-id i3lock
 
 # Keybind to take a scrot
 bindcode 208 exec --no-startup-id scrot '%Y-%m-%d_$wx$h.png' -e 'mv $f ~/Pictures/scrots/'
