i3 and vimrc changes

--- a/i3/.config/i3status/config
+++ b/i3/.config/i3status/config
@@ -31,7 +31,7 @@ ethernet eth0 {
 }
 
 battery 0 {
-        format = "%status %percentage %remaining"
+        format = "⚡: %status %percentage %remaining"
 }
 
 run_watch DHCP {
