--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -61,4 +61,4 @@ set -g default-terminal "screen-256color"
 
 #Scrollback
 set -g history-limit 10000
-set-window-option -g mode-mouse on
+#set-window-option -g mode-mouse on
